--- a/less/tenpix_base_v0.1.less
+++ b/less/tenpix_base_v0.1.less
@@ -12,11 +12,16 @@ Tenpix — 10-пиксельный css-фреймворк
 
 */
 
+/* Константы и основные переменные
+  ========================================================================== */
+@import "tenpix_const_v0.1";
+
+
+
+/* Набор margin-отступов
+  ========================================================================== */
+@import "tenpix_margins_v0.1";
 
 
 
 
-
-
-// Главный модуль всей сейтки.
-@module: 10px;
