--- a/less/tenpix_base_v0.1.1.less
+++ b/less/tenpix_base_v0.1.1.less
@@ -12,16 +12,40 @@ Tenpix — 10-пиксельный css-фреймворк
 
 */
 
+
+
+/* Чистка лишнего
+  ========================================================================== */
+
+
+
+/* Позиционная сетка
+  ========================================================================== */
+@import "tenpix_grid_v0.1.1.less";  //TODO — доработать управление сеткой и ее позиционированием
+
+
+/* Габариты
+  ========================================================================== */
+@import "tenpix_dementions_v0.1.less";
+
 /* Константы и основные переменные
   ========================================================================== */
-@import "tenpix_const_v0.1";
+@import "tenpix_const_v0.1.less";
 
 
 
 /* Набор margin-отступов
   ========================================================================== */
-@import "tenpix_margins_v0.1";
+@import "tenpix_margins_v0.1.less";   //TODO — Проработать возможные вариации
+@import "tenpix_paddings_v0.1.less";  //TODO — Проработать возможные вариации
 
 
 
+/* Типографика
+  ========================================================================== */
+@import "tenpix_typography_v0.1.less";
+//TODO — Размеры шрифтов
+//TODO — Вынос текста за верхнюю кропку позиционирования
 
+
+@import "tenpix_clearfix_v0.1.less";
