--- a/less/tenpix_base_v0.1.1.less
+++ b/less/tenpix_base_v0.1.1.less
@@ -12,7 +12,10 @@ Tenpix — 10-пиксельный css-фреймворк
 
 */
 
-
+/* Типографика
+  ========================================================================== */
+@import "tenpix_typography_v0.1.less";
+//TODO — Вынос текста за верхнюю кромку позиционирования
 
 /* Чистка лишнего
   ========================================================================== */
@@ -41,11 +44,7 @@ Tenpix — 10-пиксельный css-фреймворк
 
 
 
-/* Типографика
-  ========================================================================== */
-@import "tenpix_typography_v0.1.less";
-//TODO — Размеры шрифтов
-//TODO — Вынос текста за верхнюю кропку позиционирования
+
 
 
 @import "tenpix_clearfix_v0.1.less";
