Commit 5: modular bug fix
[*] Fixed bug in modular calculation
[*] Fixed bug in line-height calc after 50px size

--- a/less/tenpix_base_v0.1.1.less
+++ b/less/tenpix_base_v0.1.1.less
@@ -12,19 +12,22 @@ Tenpix — 10-пиксельный css-фреймворк
 
 */
 
-/* Типографика
-  ========================================================================== */
-@import "tenpix_typography_v0.1.less";
-//TODO — Вынос текста за верхнюю кромку позиционирования
+//TODO — Проверить в сочетании с другми фреймворками, например Bootstrap
+
+
+
 
 /* Чистка лишнего
   ========================================================================== */
-
+@import "tenpix_clearfix_v0.1.less";
 
 
 /* Позиционная сетка
   ========================================================================== */
-@import "tenpix_grid_v0.1.1.less";  //TODO — доработать управление сеткой и ее позиционированием
+@import "tenpix_grid_v0.1.1.less";
+//TODO — доработать управление сеткой и ее позиционированием
+//TODO — Проверить работу с разными модулями
+//TODO — Вынести настройки в const-файл
 
 
 /* Габариты
@@ -43,8 +46,8 @@ Tenpix — 10-пиксельный css-фреймворк
 @import "tenpix_paddings_v0.1.less";  //TODO — Проработать возможные вариации
 
 
-
-
-
-
-@import "tenpix_clearfix_v0.1.less";
+/* Типографика
+  ========================================================================== */
+@import "tenpix_typography_v0.1.less";
+//TODO — Сделать возможность использования нескольких шрифтов
+//TODO — Вынести переменные настроек в const-файл
