--- a/less/tenpix_paddings_v0.1.less
+++ b/less/tenpix_paddings_v0.1.less
@@ -8,11 +8,11 @@
 
   @pSize: @module * @pi;
 
-  .padding-@{pSize} {padding: ~"@{pSize}px";}
-  .padding-top-@{pSize} {padding-top: ~"@{pSize}px";}
-  .padding-right-@{pSize} {padding-right: ~"@{pSize}px";}
-  .padding-bottom-@{pSize} {padding-bottom: ~"@{pSize}px";}
-  .padding-left-@{pSize} {padding-left: ~"@{pSize}px";}
+  .padding-@{pi} {padding: ~"@{pSize}px";}
+  .padding-top-@{pi} {padding-top: ~"@{pSize}px";}
+  .padding-right-@{pi} {padding-right: ~"@{pSize}px";}
+  .padding-bottom-@{pi} {padding-bottom: ~"@{pSize}px";}
+  .padding-left-@{pi} {padding-left: ~"@{pSize}px";}
 
   // Следующая итерация
   .paddingsGenerator(@pi - 1);
