Chang filenames & readme

--- a/less/tenpix_base.less
+++ b/less/tenpix_base.less
@@ -19,12 +19,12 @@ Tenpix — 10-пиксельный css-фреймворк
 
 /* Чистка лишнего
   ========================================================================== */
-@import "tenpix_clearfix_v0.1.less";
+@import "tenpix_clearfix.less";
 
 
 /* Позиционная сетка
   ========================================================================== */
-@import "tenpix_grid_v0.1.1.less";
+@import "tenpix_grid.less";
 //TODO — доработать управление сеткой и ее позиционированием
 //TODO — Проверить работу с разными модулями
 //TODO — Вынести настройки в const-файл
@@ -32,22 +32,22 @@ Tenpix — 10-пиксельный css-фреймворк
 
 /* Габариты
   ========================================================================== */
-@import "tenpix_dementions_v0.2.less";
+@import "tenpix_dementions.less";
 
 /* Константы и основные переменные
   ========================================================================== */
-@import "tenpix_const_v0.1.less";
+@import "tenpix_const.less";
 
 
 
 /* Набор margin-отступов
   ========================================================================== */
-@import "tenpix_margins_v0.2.less";   //TODO — Проработать возможные вариации
-@import "tenpix_paddings_v0.2.less";  //TODO — Проработать возможные вариации
+@import "tenpix_margins.less";   //TODO — Проработать возможные вариации
+@import "tenpix_paddings.less";  //TODO — Проработать возможные вариации
 
 
 /* Типографика
   ========================================================================== */
-@import "tenpix_typography_v0.2.less";
+@import "tenpix_typography.less";
 //TODO — Сделать возможность использования нескольких шрифтов
 //TODO — Вынести переменные настроек в const-файл
